- include/config.h: Enable CONF_WITH_FASTRAM when CONF_FASTRAM_SIZE is
  defined. (VRI)
- bios/vt52.c: Fixed cursor artifact on Esc E (Clear Screen). (VRI)
- cli/command.c: Use Esc E to clear the screen. (VRI)
- bios/vt52.c: Disable SERIAL_CONSOLE_HONOR_HOME by default. (VRI)
- Makefile release.mk bios/coldfire.c bios/coldfire.h bios/coldfire2.S
  bios/coldpriv.h bios/ide.c bios/machine.c bios/startup.S doc/readme-m548x.txt
  include/config.h: Added support for the ColdFire Evaluation boards. (VRI)

2013-03-23
- include/config.h: Fixed regression on FastRAM support. (VRI)
- tools/erd.c: Changed name of strdup() due to conflict on BSD systems. (RFB)

2013-03-24
- bios/dmasound.* bios/xbios.c: Added dsptristate() and gpio() XBIOS calls,
  and fixed write_microwire() to wait correctly now. (THH)

2013-03-25
- bios/dmasound.c: Added volume control via soundcmd() for STE/TT, too, and
  improved sndstatus() for Falcon. (THH)
- vdi/vdi_defs.h vdi/vdi_gdp.c vdi/vdi_line.c vdi/vdi_main.c: Static cleanup.
  Contributed by Eero Tamminen. (VRI)
- bios/kprintasm.S: Removed unused ASM glue for kprintf(). (VRI)
- bios/linea.S: Added DBG_LINEA. (VRI)
- bios/bios.c: Disabled DBGAUTOBOOT. (VRI)
- bios/acsi.c: Added DBG_ACSI. (VRI)
- bios/disk.c: Always test DBG_DISK before calling kprintf(). (VRI)
- aes/gemsuper.c: Always test DBG_GEMSUPER before calling kprintf(). (VRI)
- aes/gemgsxif.c: Added DBG_GEMGSXIF. (VRI)
- bios/blkdev.c: Always test DBG_BLKDEV before calling kprintf(). (VRI)
- bios/kprintf.c: Hide the cursor in panic(). (VRI)
- bios.linea.S: Cleaned up linea_stub. (VRI)
- bios.linea.S: Fail with panic on unimplemented Line A function. (VRI)

2013-03-27
- *: Static cleanup. Contributed by Eero Tamminen. (VRI)

2013-04-04
- cli/cmd.h cli/cmdasm.S cli/cmdedit.c cli/cmdexec.c cli/cmdint.c
  cli/cmdmain.c cli/cmdparse.c cli/cmdutil.c cli/Makefile: Added new
  (standalone) version of EmuCON. (RFB)

2013-04-07
- cli/cmdasm.S: Minor code cleanup. Thanks to Vincent Riviere. (RFB)